<resources>
    <string name="app_name">My Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="Search">Search</string>
    <string name="errorTitle">Empty</string>
    <string name="errorDesc">Your request data is not available</string>
    <string name="resetButtonError">Reset</string>
    <string name="titleProduct">Title Product</string>
    <string name="addToFavorite">Add To favorite</string>
    <string name="detailProduct">Detail Product</string>
    <string name="deleteAll">Delete All</string>
</resources>